<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_main_background"
    tools:context="com.example.savss.expensetracker.SignUpActivity">

    <TextView
        android:id="@+id/signUpTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/signUpButtonName"
        android:textColor="#000000"
        android:textSize="32sp"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/yourNameInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signUpTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:inputType="textEmailAddress"
        android:textColorHint="#808080"
        android:theme="@style/EditTextHint">

        <EditText
            android:id="@+id/yourName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/userNameEditTextHint"
            android:inputType="textPersonName"
            android:textColor="#FFFFFF" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/emailAddressInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/yourNameInputLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:inputType="textEmailAddress"
        android:textColorHint="#808080"
        android:theme="@style/EditTextHint">

        <EditText
            android:id="@+id/emailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/emailAddressEditTextHint"
            android:inputType="textEmailAddress"
            android:textColor="#FFFFFF" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/phoneNumberInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailAddressInputLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:inputType="textEmailAddress"
        android:textColorHint="#808080"
        android:theme="@style/EditTextHint">

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phoneNumberEditTextHint"
            android:inputType="phone"
            android:textColor="#FFFFFF" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phoneNumberInputLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:inputType="textEmailAddress"
        android:textColorHint="#808080"
        android:theme="@style/EditTextHint">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passwordEditTextHint"
            android:inputType="textPassword"
            android:textColor="#FFFFFF" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/confirmPasswordInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordInputLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:inputType="textEmailAddress"
        android:textColorHint="#808080"
        android:theme="@style/EditTextHint">

        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirmPasswordEditTextHint"
            android:inputType="textPassword"
            android:textColor="#FFFFFF" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/confirmPasswordInputLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@android:color/holo_blue_bright"
        android:onClick="signUpButton_onClick"
        android:text="@string/signUpButtonName" />

</RelativeLayout>