<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_main_background"
    tools:context="com.example.savss.expensetracker.LoginActivity">

    <TextView
        android:id="@+id/LoginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/loginButtonName"
        android:textColor="#FFFFFF"
        android:textSize="32sp"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/emailAddressInputLayout"
        android:theme="@style/EditTextHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/LoginTextView"
        android:layout_centerHorizontal="true">

        <EditText
            android:id="@+id/emailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:hint="@string/idEditTextHint"
            android:inputType="textEmailAddress"
            android:textColor="#FFFFFF" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordInputLayout"
        android:theme="@style/EditTextHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_below="@+id/emailAddressInputLayout"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:hint="@string/passwordEditTextHint"
            android:inputType="textPassword"
            android:textColor="#FFFFFF" />
    </android.support.design.widget.TextInputLayout>


    <TextView
        android:id="@+id/invalidText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordInputLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textColor="@color/invalidColour"
        android:visibility="gone"
        android:textSize="20sp"
        android:text="@string/loginErrorMessage"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/loginButtonName"
        android:layout_below="@+id/passwordInputLayout"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/login_button_background"
        android:onClick="loginValidation"/>

</RelativeLayout>
