<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/activity_main_background">
<ViewSwitcher
    android:id="@+id/profileViewSwitcher"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp"
        android:text="NAME"
        android:fontFamily="sans-serif-condensed-medium"
        android:textColor="#FFFF"
        android:textSize="14sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/textView2"
            android:layout_alignStart="@+id/textView2"

            android:layout_marginStart="0dp"
            android:layout_marginTop="9dp"
            android:textColor="@color/BackgroundWhiteColor"
            android:textSize="15sp" />

        <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:layout_alignStart="@+id/textView6"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="25dp"
        android:background="@color/BackgroundWhiteColor"
        android:id="@+id/view" />


        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textView5"
            android:layout_below="@+id/view"
            android:layout_marginTop="30dp"
            android:text="EMAIL ID"
            android:fontFamily="sans-serif-condensed-medium"
            android:textColor="@color/BackgroundWhiteColor"
            android:textSize="14sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:textColor="@color/BackgroundWhiteColor"
        android:textSize="15sp" />

        <View
            android:id="@+id/view2"
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:layout_alignStart="@+id/textView6"
            android:layout_below="@+id/textView7"
            android:layout_marginTop="4dp"
            android:background="@color/BackgroundWhiteColor" />


        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView6"
            android:layout_below="@+id/view2"
            android:layout_marginTop="30dp"
            android:text="@string/addressEditTextHint"
            android:fontFamily="sans-serif-condensed-medium"
            android:textColor="@color/BackgroundWhiteColor"
            android:textSize="14sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView6"
        android:layout_below="@+id/textView5"

        android:textColor="@color/BackgroundWhiteColor"
        android:textSize="15sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:layout_above="@+id/textView"
        android:layout_alignStart="@+id/textView6"
        android:layout_marginTop="4dp"
        android:background="@color/BackgroundWhiteColor" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView6"
        android:layout_below="@+id/textView8"
        android:layout_marginTop="30dp"
        android:text="@string/phoneNumberEditTextHint"
        android:fontFamily="sans-serif-condensed-medium"
        android:textColor="@color/BackgroundWhiteColor"
        android:textSize="14sp" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView6"
        android:layout_below="@+id/textView"

        android:textColor="@color/BackgroundWhiteColor"
        android:textSize="15sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:layout_alignStart="@+id/textView6"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="4dp"
        android:background="@color/BackgroundWhiteColor" />
    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView7"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="30dp"
        android:text="@string/dobEditTextHint"
        android:fontFamily="sans-serif-condensed-medium"
        android:textColor="@color/BackgroundWhiteColor"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView9"
        android:layout_below="@+id/textView9"

        android:textColor="@color/BackgroundWhiteColor"
        android:textSize="15sp"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:layout_alignBottom="@+id/textView10"
        android:layout_alignStart="@+id/textView6"
        android:layout_marginTop="8dp"
        android:background="@color/BackgroundWhiteColor" />

    <Button
        android:id="@+id/changeProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="54dp"
        android:background="@drawable/login_button_background"
        android:text="Change Profile Settings"
        android:fontFamily="sans-serif-condensed-medium"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/textView10"
        android:textSize="12dp" />

    </RelativeLayout>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/activity_main_background">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/yourNameInputLayout"
            android:layout_width="match_parent"
            android:theme="@style/EditTextHint"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="10dp"

            android:layout_centerHorizontal="true">
            <EditText
                android:id="@+id/yourName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:inputType="textPersonName"
                android:hint="NAME"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/emailAddressInputLayout"
            android:layout_width="match_parent"
            android:theme="@style/EditTextHint"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_below="@+id/yourNameInputLayout"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true">
            <EditText
                android:id="@+id/emailAddress"
                android:layout_width="match_parent"
                android:textColor="#FFFFFF"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/emailAddressEditTextHint"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/phoneNumberInputLayout"
            android:theme="@style/EditTextHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_below="@+id/emailAddressInputLayout"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true">
            <EditText
                android:id="@+id/phoneNumber"
                android:layout_width="match_parent"
                android:textColor="#FFFFFF"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="@string/phoneNumberEditTextHint"/>

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/addressInputLayout"
            android:theme="@style/EditTextHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_below="@+id/phoneNumberInputLayout"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true">
            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:textColor="#FFFFFF"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress"
                android:hint="@string/addressEditTextHint"/>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/addressInputLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:inputType="textEmailAddress"
            android:theme="@style/EditTextHint">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/passwordEditTextHint"
                android:inputType="textPassword"
                android:textColor="#FFFFFF"
                tools:text="PASSWORD" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/confirmPasswordInputLayout"
            android:theme="@style/EditTextHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_below="@+id/passwordInputLayout"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true">

            <EditText
                android:id="@+id/confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="CONFIRM PASSWORD"
                android:inputType="textPassword"
                android:textColor="#FFFFFF"
                tools:text="CONFIRM PASSWORD" />
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/updateProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="50dp"
            android:layout_marginBottom="20dp"
            android:layout_below="@+id/confirmPasswordInputLayout"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_marginTop="20dp"
            android:text="Update Profile"
            android:textSize="15dp"
            android:background="@drawable/login_button_background"/>
        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:background="@drawable/login_button_background"
            android:layout_below="@+id/confirmPasswordInputLayout"
            android:text="Cancel"
            android:textSize="15dp"/>

    </RelativeLayout>
</ViewSwitcher>



</RelativeLayout>
